# zbar-android

./: .gitignore  CMakeLists.txt  README.md  build.gradle
src/main/: AndroidManifest.xml
src/main/jni/include/: zbar.h
src/main/jni/include/zbar/: Decoder.h  Exception.h  Image.h  Scanner.h  Symbol.h
src/main/jni/zbar/: convert.c  event.h  image.c  image.h  img_scanner.h  mutex.h  thread.h
